--- a/layouts/fonts.css
+++ b/layouts/fonts.css
@@ -1,5 +1,8 @@
-@font-face {
-    font-family: "Oxygen";
-    src: local("Oxygen"),
-     url(~assets/fonts/roboto/Roboto-Bold.ttf) format("truetype");
-}
+/* @font-face {
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 400;
+    src: local("Roboto"),
+     url(~assets/fonts/Roboto/Roboto-Bold.ttf) format("truetype");
+} */
+
