--- a/assets/style.css
+++ b/assets/style.css
@@ -17,7 +17,7 @@
     padding-right: 50px;
 }
 
-.bg-forms1{
+/* .bg-forms1{
     background-image: url('../assets/images/preptime_bg.png');
     background-color: #EFEEEE;
-}
+} */
