--- a/layouts/style.css
+++ b/layouts/style.css
@@ -1,5 +1,6 @@
 body{
     font-family: sans-serif;
+    background-color: #EFEEEE;
 }
 .nav-link {
     font-weight: bold;
@@ -20,17 +21,37 @@ body{
     padding-right: 50px;
 }
 
-/* .bg-forms1{
-    background-image: url('../assets/images/preptime_bg.png');
-    background-color: #EFEEEE;
-} */
-
-/* @font-face {
-    font-family: "Squada_One";
-    font-style: normal;
-    font-weight: 400;
-    src: local("Squada_One"), 
-     url(~assets/fonts/Squada_One/SquadaOne-Regular.ttf) format("truetype");
-} */
-
-
+.form-bg{
+    position: relative;
+}
+.form-bg:before{
+    content: ' ';
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0.3;
+    background-image: url('~assets/images/preptime_bg.png');
+    background-repeat: no-repeat;
+    background-position: 50% 0;
+    background-size: cover;
+}
+.sheet-bg{
+    position: relative;
+}
+.sheet-bg:before{
+    content: ' ';
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0.3;
+    background-image: url('~assets/images/preptime_bg_2.png');
+    background-repeat: no-repeat;
+    background-position: 50% 0;
+    background-size: cover;
+}
