--- a/layouts/style.css
+++ b/layouts/style.css
@@ -38,6 +38,7 @@ body{
     background-repeat: no-repeat;
     background-position: 50% 0;
     background-size: cover;
+    z-index: -1;
 }
 .sheet-bg{
     position: relative;
@@ -55,6 +56,7 @@ body{
     background-repeat: no-repeat;
     background-position: 50% 0;
     background-size: cover;
+    z-index: -1;
 }
 
 a{
