--- a/layouts/global.css
+++ b/layouts/global.css
@@ -1,5 +1,4 @@
 body{
-    font-family: sans-serif;
     background-color: #EFEEEE;
 }
 .nav-link {
@@ -62,3 +61,14 @@ body{
 a{
     color: #000000;
 }
+
+
+/* @font-face {
+    font-family: "Squada_One";
+    src: local("Squada_One"),
+    url(assets/fonts/Squada_One/SquadaOne-Regular.ttf) format("truetype");
+} */
+
+h2{
+    font-family: "Squada_One";
+} 
